Fixed bugs related to index
- Wrong index not causing an error
- Right index picking wrong pane